@@ -3,5 +3,10 @@
 use strict;
 use warnings;
 use DBIx::SchemaChecksum;
-use Getopt::Long;
+
+my $sc = DBIx::SchemaChecksum->new_with_options();
+
+print $sc->schemadump ."\n" if $sc->verbose;
+print $sc->checksum,"\n";
+
 
