@@ -7,14 +7,23 @@ use DBI;
 use Digest::SHA1;
 use Data::Dumper;
 
-has 'dbh' => ( isa => 'DBI::db', is => 'ro', required => 1 );
-has 'catalog' => (is => 'ro', isa=>'Str',default=>'%');
-has 'schemata' =>
-  ( is => 'ro', isa => 'ArrayRef[Str]', default => sub { ['%'] } );
-has 'tabletype' => (is => 'ro', isa=>'Str',default=>'table');
+with 'MooseX::Getopt';
 
+has 'dsn'       => ( isa => 'Str', is => 'ro', required => 1 );
+has 'user'      => ( isa => 'Str', is => 'ro' );
+has 'password'  => ( isa => 'Str', is => 'ro' );
+has 'host'      => ( isa => 'Str', is => 'ro' );
+
+has 'catalog'   => ( is => 'ro', isa => 'Str', default => '%' );
+has 'schemata'  =>
+  ( is => 'ro', isa => 'ArrayRef[Str]', default => sub { ['%'] } );
+has 'tabletype' => ( is => 'ro', isa => 'Str', default => 'table' );
+
+has 'verbose'   => ( is => 'ro', isa => 'Bool', default => 0);
+
+has '_dbh'       => ( isa => 'DBI::db', is => 'rw' );
 has '_schemadump'     => ( is => 'rw', isa => 'Str' );
-has '_got_schemadump' => ( is => 'rw', isa => 'Bool' );
+
 
 =head1 NAME
 
@@ -28,19 +37,25 @@ DBIx::SchemaChecksum - Generate and compare checksums of database schematas
 
 =cut
 
-=head3 calculate_checksum
+sub BUILD {
+    my $self = shift;
+    $self->_dbh(DBI->connect($self->dsn));
+}
 
-    my $checksum = $sc->calculate_checksum;
+
+=head3 checksum
+
+    my $checksum = $sc->checksum;
 
 Return the checksum (as a SHA1 digest)
 
 =cut
 
-sub calculate_checksum {
+sub checksum {
     my $self = shift;
 
     my $as_string = $self->schemadump;
-
+    return Digest::SHA1::sha1_hex($as_string);
 }
 
 =head3 schemadump
@@ -54,37 +69,41 @@ Dump).
 
 sub schemadump {
     my $self = shift;
-    return $self->_schemadump if $self->_got_schemadump;
-
+ 
+    return $self->_schemadump if $self->_schemadump;
+    
     my $tabletype = $self->tabletype;
-    my $catalog = $self->catalog;
+    my $catalog   = $self->catalog;
 
-    my $dbh = $self->dbh;
+    my $dbh = $self->_dbh;
 
     my %relevants = ();
-    foreach my $schema (@{$self->schemata}) {
-        foreach my $table ( $dbh->tables( $catalog, $schema, '%', $tabletype ) ) {
+    foreach my $schema ( @{ $self->schemata } ) {
+        foreach my $table ( $dbh->tables( $catalog, $schema, '%', $tabletype ) )
+        {
             my %data = ( table => $table );
 
+            # remove schema name from table
             my $t = $table;
             $t =~ s/^.*?\.//;
 
-            my @fks = $dbh->primary_key( $catalog, $schema, $t );
-            $data{primary_keys} = \@fks;
+            my @pks = $dbh->primary_key( $catalog, $schema, $t );
+            $data{primary_keys} = \@pks if @pks;
 
             # columns
             my $sth1 = $dbh->column_info( $catalog, $schema, $t, '%' );
             if ($sth1) {
                 $data{columns} = $sth1->fetchall_arrayref(
-                {
-                    map { $_ => 1 }
-                      qw(COLUMN_NAME COLUMN_SIZE NULLABLE COLUMN_DEF ORDINAL_POSITION TYPE_NAME)
-                }
-            );
+                    {
+                        map { $_ => 1 }
+                          qw(COLUMN_NAME COLUMN_SIZE NULLABLE ORDINAL_POSITION TYPE_NAME COLUMN_DEF)
+                    }
+                );
             }
 
             # foreign keys
-            my $sth2 = $dbh->foreign_key_info( '', '', '', '', $schema, $t );
+            my $sth2 =
+              $dbh->foreign_key_info( '', '', '', $catalog, $schema, $t );
             if ($sth2) {
                 $data{foreign_keys} = $sth2->fetchall_arrayref(
                     {
@@ -100,13 +119,83 @@ sub schemadump {
     }
     my $dumper = Data::Dumper->new( [ \%relevants ] );
     $dumper->Sortkeys(1);
-    return scalar $dumper->Dump;
 
-
-    return $self->_schemadump('foo');
-
+    return $self->_schemadump( scalar $dumper->Dump );
 }
 
+
+# sqlite column_info monkeypatch
+# see http://rt.cpan.org/Public/Bug/Display.html?id=13631
+BEGIN {
+    *DBD::SQLite::db::column_info = \&_sqlite_column_info;
+}
+
+sub _sqlite_column_info {
+    my ( $dbh, $catalog, $schema, $table, $column ) = @_;
+
+    $table =~ s/["']//g;
+    $column = undef
+      if defined $column && $column eq '%';
+
+    my $sth_columns = $dbh->prepare(qq{PRAGMA table_info('$table')});
+    $sth_columns->execute;
+
+    my @names = qw( TABLE_CAT TABLE_SCHEM TABLE_NAME COLUMN_NAME
+      DATA_TYPE TYPE_NAME COLUMN_SIZE BUFFER_LENGTH
+      DECIMAL_DIGITS NUM_PREC_RADIX NULLABLE
+      REMARKS COLUMN_DEF SQL_DATA_TYPE SQL_DATETIME_SUB
+      CHAR_OCTET_LENGTH ORDINAL_POSITION IS_NULLABLE
+    );
+
+    my @cols;
+    while ( my $col_info = $sth_columns->fetchrow_hashref ) {
+        next if defined $column && $column ne $col_info->{name};
+
+        my %col;
+
+        $col{TABLE_NAME}  = $table;
+        $col{COLUMN_NAME} = $col_info->{name};
+
+        my $type = $col_info->{type};
+        if ( $type =~ s/(\w+)\((\d+)(?:,(\d+))?\)/$1/ ) {
+            $col{COLUMN_SIZE}    = $2;
+            $col{DECIMAL_DIGITS} = $3;
+        }
+
+        $col{TYPE_NAME} = $type;
+
+        $col{COLUMN_DEF} = $col_info->{dflt_value}
+          if defined $col_info->{dflt_value};
+
+        if ( $col_info->{notnull} ) {
+            $col{NULLABLE}    = 0;
+            $col{IS_NULLABLE} = 'NO';
+        }
+        else {
+            $col{NULLABLE}    = 1;
+            $col{IS_NULLABLE} = 'YES';
+        }
+
+        for my $key (@names) {
+            $col{$key} = undef
+              unless exists $col{$key};
+        }
+
+        push @cols, \%col;
+    }
+
+    my $sponge = DBI->connect( "DBI:Sponge:", '', '' )
+      or return $dbh->DBI::set_err( $DBI::err, "DBI::Sponge: $DBI::errstr" );
+    my $sth = $sponge->prepare(
+        "column_info $table",
+        {
+            rows          => [ map { [ @{$_}{@names} ] } @cols ],
+            NUM_OF_FIELDS => scalar @names,
+            NAME          => \@names,
+        }
+    ) or return $dbh->DBI::set_err( $sponge->err(), $sponge->errstr() );
+    return $sth;
+}
 
 q{ Favourite record of the moment: The Dynamics - Version Excursions }
 
